[Glitch] Prevent vertical videos from overflowing the viewport
Port 861625fdca4577658299e1b2ad08bfe3d4fe434f to glitch-soc

--- a/app/javascript/flavours/glitch/styles/components.scss
+++ b/app/javascript/flavours/glitch/styles/components.scss
@@ -7986,6 +7986,8 @@ img.modal-warning {
   position: relative;
   background: $base-shadow-color;
   max-width: 100%;
+  max-height: max(400px, 60vh);
+  margin-inline: auto;
   border-radius: 8px;
   box-sizing: border-box;
   color: $white;
